<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/home_grad"
    tools:context=".activities.ResetActivity">

    <TextView
        android:id="@+id/reset_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_weight="0"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/reset_msg"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/reset_email"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="8dp"
        android:layout_weight="0"
        android:autofillHints="email"
        android:background="@drawable/bubble_textfield"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#B8B1B1" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="64dp"
        android:layout_weight="0"
        android:background="@drawable/bubble_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:onClick="reset"/>

</LinearLayout>