<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/home_grad"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.TaskFormActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/task_name_hint"
            android:textColorHint="#BFFFFFFF"
            android:backgroundTint="#80FFFFFF"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:autofillHints=""
            android:singleLine="true"/>

        <EditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/task"
            android:layout_margin="10dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/note_optional"
            android:textColorHint="#BFFFFFFF"
            android:backgroundTint="#80FFFFFF"
            android:inputType="textMultiLine"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:autofillHints=""
            android:singleLine="false"/>

        <Button
            android:id="@+id/set_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/task_description"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bubble_button2"
            android:drawableStart="@drawable/ic_alarm"
            android:drawableLeft="@drawable/ic_alarm"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:onClick="showReminder"
            android:text="@string/set_reminder"
            android:textAllCaps="false"
            android:textColor="#BFFFFFFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/discard_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_reminder"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bubble_button2"
            android:drawableStart="@drawable/ic_alarm"
            android:drawableLeft="@drawable/ic_alarm"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:onClick="discardReminder"
            android:visibility="invisible"
            android:text="@string/discard"
            android:textAllCaps="false"
            android:textColor="#BFFFFFFF"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/pick_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/discard_reminder"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_calendar_holodark"
            android:drawableStart="@drawable/ic_calendar_holodark"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/pick_a_date"
            android:textColor="#BFFFFFFF"
            android:textColorHint="#BFFFFFFF"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="showDatePicker"
            android:visibility="invisible" />
        <View
            android:id="@+id/pick_date_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/pick_date"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="#80FFFFFF"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/pick_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pick_date_line"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_clock_holodark"
            android:drawableStart="@drawable/ic_clock_holodark"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/pick_a_time"
            android:textColor="#BFFFFFFF"
            android:textColorHint="#BFFFFFFF"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="showTimePicker"
            android:visibility="invisible" />
        <View
            android:id="@+id/pick_time_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/pick_time"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="#80FFFFFF"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/cancel_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pick_time_line"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat"
            android:gravity="bottom"
            android:onClick="cancelForm"
            android:text="@string/cancel"
            android:textColor="@color/cancel_flicker_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/submit_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pick_time_line"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat"
            android:gravity="bottom"
            android:onClick="submitForm"
            android:text="@string/submit"
            android:textColor="@color/submit_flicker_color"
            android:textSize="18sp" />
    </RelativeLayout>
</ScrollView>